Fix formatting issues in index.html

--- a/index.html
+++ b/index.html
@@ -637,8 +637,12 @@ Example: {"quote": "Gyan nai shakti ho, karma nai puja ho.\\nAfno marga china, s
                 hideModal(settingsModal);
             });
         });
-
+            
         // --- App Initialization ---
         setupCanvas();
         setInterval(drawMatrixRain, 60);
         window.addEventListener('resize', setupCanvas);
+
+        </script>
+</body>
+</html>
